--- a/.devcontainer/docker-compose.yml
+++ b/.devcontainer/docker-compose.yml
@@ -46,28 +46,18 @@ services:
     ports:
       - 6379:6379
 
-  meilisearch:
-    image: getmeili/meilisearch:latest
-    restart: unless-stopped
-    volumes:
-      - meilisearch-data:/var/lib/meilisearch/data
+  opensearch:
+    image: opensearchproject/opensearch:latest
     environment:
-      - http_proxy
-      - https_proxy
-      - MEILI_MASTER_KEY=LOCAL_TEST_KEY
-      - MEILI_ENV=${MEILI_ENV:-development}
-      - MEILI_LOG_LEVEL
-      - MEILI_DB_PATH=${MEILI_DB_PATH:-/data.ms}
+      - discovery.type=single-node
     ports:
-      - 7700:7700
+      - "9200:9200"
+      - "9600:9600"
 
-  memcached:
-    image: memcached:latest
-    restart: unless-stopped
-    volumes:
-      - memcached-data:/var/lib/memcached/data
+ redis:
+    image: redis:alpine
     ports:
-      - 11211:11211
+      - "6379:6379"1
 
 volumes:
   postgres-data:
